exports[`test does not triggerd onChange on label click if disabled 1`] = `
<div
  title={undefined}
  variant={
    Object {
      "disabled": true,
      "ltr": true,
      "rtl": false
    }
  }>
  <input
    aria-labelledby="aria3"
    checked={false}
    disabled={true}
    inputRef={[Function anonymous]}
    onChange={[Function anonymous]}
    type="radio"
    variant={
      Object {
        "disabled": true,
        "ltr": true,
        "rtl": false
      }
    } />
  <div
    onClick={[Function anonymous]}
    variant={
      Object {
        "disabled": true,
        "ltr": true,
        "rtl": false
      }
    }>
    <div
      id="aria3"
      variant={
        Object {
          "disabled": true,
          "ltr": true,
          "rtl": false
        }
      }>
      OK
    </div>
    <div
      variant={
        Object {
          "disabled": true,
          "ltr": true,
          "rtl": false
        }
      } />
  </div>
</div>
`;

exports[`test triggers onChange on input 1`] = `
<div
  title={undefined}
  variant={
    Object {
      "disabled": undefined,
      "ltr": true,
      "rtl": false
    }
  }>
  <input
    aria-labelledby="aria1"
    checked={false}
    disabled={undefined}
    inputRef={[Function anonymous]}
    onChange={[Function anonymous]}
    type="radio"
    variant={
      Object {
        "disabled": undefined,
        "ltr": true,
        "rtl": false
      }
    } />
</div>
`;

exports[`test triggers onChange on label click 1`] = `
<div
  title={undefined}
  variant={
    Object {
      "disabled": undefined,
      "ltr": true,
      "rtl": false
    }
  }>
  <input
    aria-labelledby="aria2"
    checked={false}
    disabled={undefined}
    inputRef={[Function anonymous]}
    onChange={[Function anonymous]}
    type="radio"
    variant={
      Object {
        "disabled": undefined,
        "ltr": true,
        "rtl": false
      }
    } />
  <div
    onClick={[Function anonymous]}
    variant={
      Object {
        "disabled": undefined,
        "ltr": true,
        "rtl": false
      }
    }>
    <div
      id="aria2"
      variant={
        Object {
          "disabled": undefined,
          "ltr": true,
          "rtl": false
        }
      }>
      OK
    </div>
    <div
      variant={
        Object {
          "disabled": undefined,
          "ltr": true,
          "rtl": false
        }
      } />
  </div>
</div>
`;
